# KinFit

./: AUTHORS  CMakeLists.txt  COPYRIGHTHOLDERS  LICENSE  Makefile  README.md  Testing.C  ToyMC.C  ToyMC_fromPluto.C  ToyMC_fromPluto_HRefitCand.C  ToyMC_fromPluto_HRefitCand_workaround.C  ToyMC_fromPluto_vtxSmear.C  analysis_user.C  decayBuilderAnalysis.C  findVertices_toyMC_fromPluto.C  fitLambda3C_toyMC_fromPluto.C  fit_toyMC.C  fit_toyMC_fromPluto.C  fit_toyMC_fromPluto_protoncombis.C  hcovariancekinfit.cc  hcovariancekinfit.h  hcovariancekinfit_test.cc  hcovariancekinfit_test.h  hdecaybuilder.cc  hdecaybuilder.h  hdstfitter.cc  hdstfitter.h  hgeometrytools.cc  hgeometrytools.h  hkinfitter.cc  hkinfitter.h  hneutralcandfinder.cc  hneutralcandfinder.h  hrefitcand.cc  hrefitcand.h  hrefitcandsim.cc  hrootfitter.cc  hrootfitter.h  hvertexfinder.cc  hvertexfinder.h  (+4 more)
QA/: fit4C_toyMC_fromPluto.C  fitLambda3C_toyMC_fromPluto.C  fitLambdaPva_toyMC_fromPluto.C  fitM_toyMC_fromPluto_protoncombis.C  fitMissingK_toyMC_fromPluto.C  fit_toyMC_fromPluto.C  fit_toyMC_fromPluto_protoncombis.C  plot_fitted.C  plotsStyleMacro.C  test_toyMC_fromPluto.C
QA/produceMC/: ToyMC_fromPluto.C  ToyMC_fromPluto_HRefitCand.C  ToyMC_fromPluto_KFitParticle_workaround.C
include/: CoordinateConversion.h  FitterLinkDef.h  Includes.h  KFitAnalyzer.h  KFitCoordinateConversion.h  KFitDecayBuilder.h  KFitDecayCandFinder.h  KFitDecayingCandFinder.h  KFitNeutralCandFinder.h  KFitParticle.h  KFitRootAnalyzer.h  KFitVertexFinder.h  KinFitter.h  ToyMC_fromPluto.C  hdecaybuilder.h  hgeomvertexfit.h  hkinfitter.h  hneutralcandfinder.h  hparticletool.h  hrefitcand.h  hrootfitter.h  hvertexfinder.h  hvertextools.h
source/: CoordinateConversion.cxx  KFitAnalyzer.cxx  KFitCoordinateConversion.cxx  KFitDecayBuilder.cxx  KFitDecayCandFinder.cxx  KFitDecayingCandFinder.cxx  KFitNeutralCandFinder.cxx  KFitParticle.cxx  KFitRootAnalyzer.cxx  KFitVertexFinder.cxx  KinFitter.cxx  hdecaybuilder.cxx  hgeomvertexfit.cxx  hkinfitter.cxx  hneutralcandfinder.cxx  hparticletool.cxx  hrefitcand.cxx  hrootfitter.cxx  hvertexfinder.cxx  hvertextools.cxx
